2006-11-27  Tatsuya BIZENN  <bizenn@arthub.net>

	* Now MySQL driver support index slot feature.

2006-11-21  Tatsuya BIZENN  <bizenn@arthub.net>

	* 0.8 released.

	* Fix: restrict index value to string, number, symbol, boolean, keyword,
	  vector and list whose all elements are these types.

2006-11-20  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: HTTP status
	  Server(worker) not found => 404
	  Server(worker) not respond => 503
	  Unknown error => 500

	* Fix: when kahua-dbutil upgrade fs to efs, it didn't create lock
	  directory in each class directory.

	* Change: now database name specified by :default-database-name is prior
	  to primary-database-name parameter in application source file.

	* Fix src/kahua/persistence/efs.scm: update index link before execution
	  of write-kahua-instance.

	* Update documents: INSTALL and doc/Setup.ja

	* Change plugins/fileio.scm
	  Now get-original-name return basename of Content-Disposition value.
	  Internet Explorer give full path of uploaded file as Content-Dispotion,
	  so we should strip it.

	* Fix lack of magic comment to specify character coding system
	  of source code.

	* Drop (use kahua.pdf) from kahua module.

	* Now kahua.persistence.fs is obsolete.
	  You should use kahua.persistence.efs instead of it.
	  kahua.persistence.fs is available still, but it'll have gone soon.

	* Add index slot feature to kahua.persistence.efs
	  You define persistent class like:
	  (define-class <index-test> (<kahua-persistent-base>)
	    ((a :init-keyword :a :init-value "a" :allocation :persistent :index :unique)
	     (b :init-keyword :b :init-value "b" :allocation :persistent :index :any)
	     (c :init-keyword :c :init-value "c" :allocation :persistent)))
	  and query like:
	  (make-kahua-collection <index-test> :index '(a . "a1"))
	  or
	  (make-kahua-collection <index-test> :index '(b . "b1"))
	  Now only kahua.persistence.efs has this feature, but
	  kahua.persistence.dbi(so and mysql and postgresql) will have